--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "bootstrap": "^4.5.3",
     "joi-browser": "^13.4.0",
     "jwt-decode": "^3.1.2",
+    "proptypes": "^1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-toastify": "^6.2.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
